# Podonki

./: .gitignore  agent.py  firebase.json  runner.ps1  sonar-project.properties  vcs_launch.ps1
.github/workflows/: build.yml  daily-ideas-generation.yml  deploy.yml  scheduled-telegram-posting.yml  sonar.yml  weekly-competitors-parse.yml
Brands/Podonki/: Podonki.code-workspace
Brands/Podonki/Projects/Content-automation/rust-napi/: Cargo.toml  index.d.ts  index.js  index.mjs  package-lock.json  package.json
Brands/Podonki/Projects/Content-automation/rust-napi/src/: lib.rs
Brands/Podonki/Projects/Content-automation/rust-tools/: Cargo.toml
Personal/RandomBeast/: CLAUDE.md
Personal/RandomBeast/randombeast-clone/: .env.example  .gitignore  Dockerfile  FILES_OVERVIEW.txt  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  server.js
Personal/RandomBeast/randombeast-design-clone/: design_report.html
src/: fetcher.py
Автоматизация контента/: .env.example  ANALYSIS_SUMMARY.txt  B2C_GENERATION_SYSTEM.md  B2C_RUBRICS_DRAFT.md  FILES_CREATED.md  QUICKSTART_B2C.md  QUICK_REFERENCE.md  RUBRICS_STRATEGY.md  START_HERE.txt  SYSTEM_PROMPTS_FINAL.md  package-lock.json  package.json
Автоматизация контента/data/: b2c-rubric-topics.json  podonki-off-linguistic-analysis.json  products-index.json  products.json  rubrics.json
Автоматизация контента/docs/: SETUP.md
Автоматизация контента/scripts/: generate-post.js  get-db-stats.js  load-products-simple.js  parse-telegram.js
Автоматизация контента/src/db/: podonki-db.js
(+194 files in other folders)
