[package]
name = "podonki-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
once_cell = "1"
regex = "1"
csv = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
