[package]
name = "podonki-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bm25-search"
path = "src/bin/bm25_search.rs"

[[bin]]
name = "deep-analysis"
path = "src/bin/deep_analysis.rs"

[[bin]]
name = "html-parser"
path = "src/bin/html_parser.rs"

[[bin]]
name = "json-processor"
path = "src/bin/json_processor.rs"

[[bin]]
name = "csv-converter"
path = "src/bin/csv_converter.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
unicode-segmentation = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
